k8s/system/tekton/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-system-sso@kubernetescrd,traefik-system-security@kubernetescrd'
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
    - host: tekton.fmlab.no
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - tekton.fmlab.no
      secretName: certificate-tekton-dashboard
